[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "svg-to-tgs-bot"
version = "1.0.0"
description = "Telegram bot that converts SVG files to TGS format for stickers"
authors = [{name = "SVG-TGS-Bot", email = "bot@example.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "python-telegram-bot==20.8",
    "lottie[all]>=0.7.0,<0.8.0", 
    "Pillow>=10.0.0,<11.0.0",
    "cairosvg>=2.7.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0"
]

[project.urls]
Homepage = "https://github.com/username/svg-to-tgs-bot"
Repository = "https://github.com/username/svg-to-tgs-bot"
Issues = "https://github.com/username/svg-to-tgs-bot/issues"

[project.scripts]
svg-tgs-bot = "main:main"